# cpp_primitive_recursive_functions

./: CMakeLists.txt  README.md  test.cpp
recursive/: CMakeLists.txt  all_general.hpp  all_primitive.hpp  eval.hpp  general.hpp  minimisation.hpp  primitive.hpp  primitive_functions.hpp
recursive/detail/: arity.hpp  array.hpp  parallel_evaluation.hpp  span.hpp
recursive/example/: all.hpp  arithmetic.hpp  boolean_algebra.hpp  branching.hpp  constants.hpp
